[gd_scene load_steps=3 format=3 uid="uid://c74n6v23cjt7m"]

[ext_resource type="Script" uid="uid://bl5gos0i20xiu" path="res://scenes/responsive_item_list.gd" id="1_a723t"]
[ext_resource type="Script" uid="uid://4mkm3t4erk4p" path="res://scenes/views/file_browser_view.gd" id="1_f5kxf"]

[node name="FileBrowserView" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f5kxf")

[node name="Toolbar" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="DisplayModeButton" type="OptionButton" parent="Toolbar"]
layout_mode = 2
flat = true
selected = 0
item_count = 2
popup/item_0/text = "Grid"
popup/item_0/id = 0
popup/item_1/text = "List"
popup/item_1/id = 1

[node name="VSeparator2" type="VSeparator" parent="Toolbar"]
layout_mode = 2

[node name="Label" type="Label" parent="Toolbar"]
layout_mode = 2
text = "icon size"

[node name="IconSizeButton" type="OptionButton" parent="Toolbar"]
layout_mode = 2
flat = true
selected = 1
item_count = 3
popup/item_0/text = "Small"
popup/item_0/id = 0
popup/item_1/text = "Medium"
popup/item_1/id = 1
popup/item_2/text = "Large"
popup/item_2/id = 2

[node name="VSeparator" type="VSeparator" parent="Toolbar"]
layout_mode = 2

[node name="SortButton" type="MenuButton" parent="Toolbar"]
unique_name_in_owner = true
layout_mode = 2
text = "Sort"

[node name="VSeparator3" type="VSeparator" parent="Toolbar"]
layout_mode = 2

[node name="TypeFilterButton" type="MenuButton" parent="Toolbar"]
unique_name_in_owner = true
layout_mode = 2
text = "Filter type"
item_count = 4
popup/item_0/text = "png"
popup/item_0/checkable = 1
popup/item_0/id = 0
popup/item_1/text = "jpg"
popup/item_1/checkable = 1
popup/item_1/id = 1
popup/item_2/text = "tga"
popup/item_2/checkable = 1
popup/item_2/id = 2
popup/item_3/text = "gif"
popup/item_3/checkable = 1
popup/item_3/id = 3

[node name="Control" type="Control" parent="Toolbar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="UpdateButton" type="Button" parent="Toolbar"]
unique_name_in_owner = true
layout_mode = 2
text = "Update"
flat = true

[node name="ContextMenu" type="PopupMenu" parent="."]
unique_name_in_owner = true
hide_on_checkable_item_selection = false
hide_on_state_item_selection = true

[node name="ImageList" type="ItemList" parent="." node_paths=PackedStringArray("list_view")]
unique_name_in_owner = true
custom_minimum_size = Vector2(512, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 12
select_mode = 1
allow_reselect = true
text_overrun_behavior = 4
max_columns = 11
same_column_width = true
fixed_column_width = 131
icon_mode = 0
fixed_icon_size = Vector2i(96, 96)
script = ExtResource("1_a723t")
list_view = NodePath("..")

[node name="LowerBar" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="LowerBar"]
layout_mode = 2
text = "files:"

[node name="FileCountLabel" type="Label" parent="LowerBar"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="VSeparator" type="VSeparator" parent="LowerBar"]
layout_mode = 2

[node name="Label3" type="Label" parent="LowerBar"]
layout_mode = 2
text = "selected files:"

[node name="SelectionCountLabel" type="Label" parent="LowerBar"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[connection signal="item_selected" from="Toolbar/DisplayModeButton" to="ImageList" method="set_view_mode"]
[connection signal="item_selected" from="Toolbar/IconSizeButton" to="." method="_on_icon_size_button_item_selected"]
[connection signal="item_selected" from="ImageList" to="." method="_on_item_selected"]
[connection signal="multi_selected" from="ImageList" to="." method="_on_image_list_multi_selected"]
